final change for day 1

--- a/ashu.html
+++ b/ashu.html
@@ -1,6 +1,7 @@
 <html>
 	<h1>  Hello Devops this is ashutoshh </h1>
 	<h2>  this is a small update  </h2>
+	<h3> day1 is done </h3>
 	<input>
 	<input>
 	<img  src="devops.png">
